Bug fixing in critical reading alignment and line num visualization

--- a/app/styles/_criticalApparatusEntry.scss
+++ b/app/styles/_criticalApparatusEntry.scss
@@ -70,6 +70,7 @@ $critical-apparatus-entry-selected-border-color: rgb(63, 82, 90);
             .buttonSwitch {
                 box-shadow: none;
                 border: 1px solid $critical-apparatus-entry-background-color;
+                display: inline-block;
             }
             &.active, &:hover {
                 .buttonSwitch {
